--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.8 2009/08/05 10:33:05 ith Exp $
+% $Id: mainintro.tex,v 1.9 2009/08/05 16:12:44 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.8 2009/08/05 10:33:05 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.9 2009/08/05 16:12:44 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -167,6 +167,65 @@ CMB \cite{Yadav:2007yy,crim}. The more recent WMAP5 data set
 also indicates that it is distinctly asymmetric. At the $95 \%$ confidence
 level, the bound on the 
 equilateral triangle becomes $-151 < \fnl < 253$.
+
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\section{The Lyth bound}
+\label{sec:lyth-dbiintro}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+
+Eqs. (\ref{eq:Ps-dbiintro}) and (\ref{eq:Pt-dbiintro}) imply 
+that the variation of the inflaton field during inflation  
+is related to the tensor-scalar amplitude by \cite{lyth,bmpaper}
+% 
+\begin{equation}
+\label{eq:genlyth-dbiintro}
+\frac{1}{\Mpl^2}
+\left( \frac{d \varphi}{d \cal{N}} \right)^2 = \frac{r}{8 c_s P_{,X}} \,,
+\end{equation}
+% 
+where ${\cal{N}} \equiv \int dt \, H$ denotes the number of e-foldings.
+We will refer to the epoch of inflation that can be directly 
+constrained by cosmological observations as 
+`observable inflation' and will assume that this phase 
+occurred when the brane was located within a 
+throat region\footnote{We denote the values of all parameters 
+evaluated during observable inflation by a subscript 
+`$*$'.}. Observable inflation corresponds to no more than about 4 e-foldings  
+of inflationary expansion, $\Delta {\cal{N}}_* \simeq 4$. 
+The total variation in the inflaton field between the epoch of observable 
+inflation and the end of inflation is then given by
+% 
+\begin{equation}
+\label{eq:totalfield-dbiintro}
+\frac{\Delta \varphi_{\rm inf}}{\Mpl} = 
+\left( \frac{r}{8c_sP_{,X}} \right)_*^{1/2} {\cal{N}}_{\rm eff} \,,
+\end{equation}
+% 
+where
+% 
+\begin{equation}
+\label{eq:Neff-dbiintro}
+{\cal{N}}_{\rm eff} \equiv \left( \frac{c_sP_{,X}}{r}\right)_*^{1/2}
+\int_0^{{\cal{N}}_{\rm end}}  
+\left( \frac{r}{c_sP_{,X}} \right)^{1/2} d {\cal{N}} \,.
+\end{equation}
+% 
+If $r/(c_s P_{,X})$ varies 
+sufficiently slowly during observable inflation, 
+the corresponding change in the value of the inflaton  
+field is given approximately by \cite{lyth,bmpaper}
+% 
+\begin{equation}
+\label{eq:approxlyth-dbiintro}
+\left( \frac{\Delta \varphi}{\Mpl} \right)_*^2 \simeq 
+\frac{(\Delta {\cal{N}}_*)^2}{8} \left( \frac{r}{c_sP_{,X}} \right)_* \,.
+\end{equation}
+% 
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
