--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.29 2009/08/05 16:12:35 ith Exp $
+% $Id: dbi-intro.tex,v 1.30 2009/08/05 22:25:30 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.29 2009/08/05 16:12:35 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.30 2009/08/05 22:25:30 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -164,8 +164,11 @@ fruitful for models of cosmological inflation, Type IIB.
 % description of the universe.
 
 \subsection{Cosmology and String Theory}
+\label{sec:stringcos-dbiintro}
+% 
 Temperatures in the early univerese were far in excess of those attainable by
-any earth-bound particle accelerator. Hence a stringent test of any high energy
+any earth-bound particle accelerator today. Hence a stringent test of any high
+energy
 theory is whether it predicts the same properties of the early universe that are
 now being observed in the CMB and elsewhere.
 For this reason any string theory description of the universe must include a
@@ -182,9 +185,24 @@ existence of inflaton fields. In this way inflation and string theory are
 ideal partners and it is natural to consider them together when investigating
 the early universe.
 
-\addtodo{Add paras on constraining string theory with cosmology, genericity
+\addtodo{Clarify paras on constraining string theory with cosmology, genericity
 argument, unexpected signals. Tie to introduction chapter and fnl as a
-discriminator.}
+discriminator. Add citations.}
+
+Cosmology can be used to constrain string theory. Much of the evidence of an
+era of string theory physics would be removed by a period of inflation but the
+observational results of inflation itself could provide clues about the nature
+of such an era.
+
+One method would be to look for signals that are generic in string theory and
+see if they are observed. Conversely any observed signal that is rare in string
+theory could also yield information.
+
+One particularly good indicator is the non-gaussianity parameter $\fnl$.
+Standard inflation models tend not to produce much non-gaussianity, whereas
+certain classes of string theory inspired models have large non-gaussian
+signatures. While not exclusively a string theory effect, a detection of or
+failure to detect non-gaussianity would rule in and out large classes of models.
 
 \subsection{Extra dimensions}
 One of the basics results of string theory is that the 3 spacial dimensions that we see
@@ -291,21 +309,6 @@ of string theory for closed strings.
 % 
 \subsection{D-branes}
 \label{sec:dbranes-dbiintro}
-% Open string + T-duality = Dirichlet boundary conditions
-% 
-% Mixed Dirichlet and von Neumann boundary conditions.
-% 
-% D-p branes, open strings end on p+1 ? dimensional manifold.
-% 
-% For Type IIB we have D-1,3,5,7 branes
-% 
-% See Johnson p80 for D-brane action.
-% 
-% Brane inflation was first considered without moduli stabilization (pg21
-% Douglas
-% and Kachru for refs). This gave a potential similar to hybrid inflation with
-% waterfall field. KKLMMT argued that the corrections from including moduli
-% stabilization were too big to ignore.
 Despite using string theory we will not be dealing with strings themselves.
 Instead we will consider the dynamics of extended objects known as branes and
 in particular we will use Dirichlet- or D-branes. As mentioned above string
@@ -357,7 +360,7 @@ where $\hat{g}_{ab}$ is the induced metric on the brane with internal
 coordinates $\xi^a$ for $a=0,\ldots,p$. This is the general form of the DBI
 action which will be used later.
 
-\subsection{D-brane inflation}
+
 At its most basic slow-roll inflation requires only a single scalar field with a
 sufficiently flat potential to satisfy the slow roll conditions outlined in
 Section \ref{sec:slowroll-intro}. D-branes are charged (with Ramond-Ramond
@@ -368,6 +371,8 @@ inflaton \cite{brane1,brane2,brane3,brane7}.
 When the branes collide they will annihilate and produce energy which would
 reheat the universe. 
 
+\addtodo{Add more description of standard D-brane models?}
+
 As described in Section \ref{sec:extradims} compacitifying dimensions
 introduces scalar fields known as moduli. These massless fields must be
 accounted for in the dynamics unless some way is found to ``stabilize'' them by
@@ -375,7 +380,8 @@ fixing their mass to be large enough that they do not interfere.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
 stabilization. Instead they
 assumed that whatever stabilization technique was used would have no discernable
-effect on the inflationary physics [cite kklt***]. Kac
+effect on the inflationary physics. Kachru \etal \cite{brane4} recognized that
+in fact the stabilization will be important and must be taken into account.
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \subsection{Warped throats}
@@ -384,7 +390,7 @@ effect on the inflationary physics [cite kklt***]. Kac
 The moduli must
 be stabilized so that they do not appear in the effective action as
 massless fields. This can be achieved by switching on background fluxes in the
-compactified space. These fluxes are the equivalents of magnetic
+compactified space. These fluxes are equivalent to magnetic
 fields in the higher dimensional space. By Gauss' theorem  the compact space
 will now have a quantized non-zero total charge.
 In the presence of fluxes a general form of metric with a warp factor is
