--- a/ihformat.sty
+++ b/ihformat.sty
@@ -1,7 +1,7 @@
 % % % % % % % % % % % % % 
 %  Ian Huston - ihformat.sty
 %  formatting and macros
-%  $Id: ihformat.sty,v 1.17 2009/07/30 11:18:37 ith Exp $
+%  $Id: ihformat.sty,v 1.18 2009/08/05 22:25:41 ith Exp $
 % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihformat}
@@ -19,7 +19,7 @@
 \def\version$#1,v #2 #3${} }%
 % \renewcommand{\version}[$#1,v #2 #3 #4$]{#2, #3}}%
 % Use the following line in each file to specify revision, date
-% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.17 2009/07/30 11:18:37 ith Exp $}
+% \renewcommand{\CVSrevision}{\version$Id: ihformat.sty,v 1.18 2009/08/05 22:25:41 ith Exp $}
 
 % Should we use showlabels? Set with labels option, default is off.
 \newboolean{@showlabels}
@@ -81,7 +81,9 @@
 % Hyperlinking without footnotes.
 \ifthenelse{\boolean{@usehyperref}}%
 {\RequirePackage[pdftex,colorlinks,hyperfootnotes=false]{hyperref}}%
-{\newcommand{\hypersetup}[1]{}}%
+{\newcommand{\hypersetup}[1]{}
+\newcommand{\url}[1]{#1}
+}%
 
 % Should we use showlabels?
 \ifthenelse{\boolean{@showlabels}}{\RequirePackage[inline]{showlabels}}{}
