--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.30 2009/08/05 22:25:30 ith Exp $
+% $Id: dbi-intro.tex,v 1.31 2009/08/06 11:23:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.30 2009/08/05 22:25:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.31 2009/08/06 11:23:25 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -96,11 +96,11 @@ light. This induces a large and potentially detectable non-Gaussian
 signal in the density perturbations \cite{brane6,brane11,lidser3,chenetal}. 
 
 
-In this chapter we introduce non-canonical inflation and DBI inflation.
+In this chapter we introduce string theory, warped compactifications and DBI inflation.
 In Chapter \ref{ch:dbi} we will derive upper and lower 
-limits on the amplitude of the tensor perturbations in Sections \ref{sec:upper-dbi} and  
-\ref{sec:lower-dbi} respectively.  
-We will explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss multi-brane 
+limits on the amplitude of the tensor perturbations.  
+We will explore how these bounds may be relaxed in Chapter \ref{ch:multibrane} and discuss
+multi-brane 
 scenarios which permit observational tensor signals. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -112,7 +112,7 @@ scenarios which permit observational tensor signals.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 Unification of seemingly disparate theories has been a driving force in
-theoretical physics for more than 100 years. This effort culminated in the
+theoretical physics for more than a hundred years. This effort culminated in the
 Standard Model (SM) of particle physics which unifies three of the four
 fundamental forces in a robust theoretical framework. Since the realization of
 the SM a clear goal of theoretical physics has been the unification of the
@@ -127,8 +127,8 @@ application to cosmology, a short list of recent works includes
 String theory is one of the most successful current attempts to achieve the
 unification of physics. According to this theory, the fundamental
 building blocks of the
-universe are vibrating bundles of energy. These ``strings'', and their analogues
-in other dimensions, constitute all matter and force particles in existence.
+universe are vibrating bundles of energy. These ``strings'' constitute all matter and force
+particles in existence.
 There are two main
 types of strings, closed and open, distinguished by the fact that closed
 strings form a continuous loop while open strings have two unconnected ends. 
@@ -177,9 +177,10 @@ consistent cosmological narrative.
 In Chapter \ref{ch:introduction} inflation was put forward as the leading
 explanation of the early development of the universe. For string theory to be
 a consistent framework in the inflationary paradigm it must produce a period of
-inflationary expansion. Inflation requires the input of physics beyond the SM
-for its existence. Although usually described by SM scalar fields, there is no
-inherent reason for the existence of such inflaton fields in the SM. Higher
+inflationary expansion. The input of physics beyond
+the SM is required to understand the origin of inflation. Although usually described by SM scalar
+fields, there is as yet no
+evidence for the existence of such fields in the SM. Higher
 energy theories such as string theory could provide an explanation for the
 existence of inflaton fields. In this way inflation and string theory are
 ideal partners and it is natural to consider them together when investigating
@@ -189,33 +190,37 @@ the early universe.
 argument, unexpected signals. Tie to introduction chapter and fnl as a
 discriminator. Add citations.}
 
-Cosmology can be used to constrain string theory. Much of the evidence of an
+Cosmology can be used as a tool to constrain string theory. Much of the evidence of an
 era of string theory physics would be removed by a period of inflation but the
 observational results of inflation itself could provide clues about the nature
-of such an era.
+of such an era. 
 
-One method would be to look for signals that are generic in string theory and
-see if they are observed. Conversely any observed signal that is rare in string
-theory could also yield information.
+One avenue of investigation would be to look for signals that are generic in string theory and
+see if they are observed. While this could not definitively prove string theory to be the 
+cause it would vindicate continued efforts to find such a smoking gun. Conversely any observed
+signal that is predicted to occur rarely in string theory would make the theory more implausible.
+Limiting the parameter space of an acceptable string theory to an ever smaller region would also
+decrease its viability even if it could not be ruled out. 
 
 One particularly good indicator is the non-gaussianity parameter $\fnl$.
-Standard inflation models tend not to produce much non-gaussianity, whereas
+Standard inflation models, including the single field slow roll model described in
+Section~\ref{sec:slowroll-intro}, tend not to produce much non-gaussianity, whereas
 certain classes of string theory inspired models have large non-gaussian
 signatures. While not exclusively a string theory effect, a detection of or
 failure to detect non-gaussianity would rule in and out large classes of models.
 
 \subsection{Extra dimensions}
-One of the basics results of string theory is that the 3 spacial dimensions that we see
+String theory tells us that the 3 spacial dimensions that we see
 around us are not the full extent of the space-time manifold. Instead
-we live in a ten or
-eleven dimensional space-time and physical theories in 3+1 dimensions must
+we live in a 10 or
+11 dimensional space-time and physical theories in 3+1 dimensions must
 compensate for the
 other 6 or 7 dimensions that are hidden from us. One of the challenges of string theory is how 
 to hide these extra dimensions in such a way as to recover standard physical
 results in the usual
 ones. 
 
-The early work of Kaluza and Klein in formulating higher dimensional 
+The early work of Kaluza and Klein (KK) in formulating higher dimensional 
 theories laid the groundwork for the current treatment of extra dimensions in
 string theory \cite{Kaluza1921, Klein1926}. They found that by
 compactifying an extra dimension onto a circle of finite radius an infinite
@@ -277,7 +282,7 @@ $n/R$ for $n \in \mathbb{Z}$. This is a KK tower of massive states. As we
 complete a circuit around the compact dimension, the value of the coordinate
 function embedding the string in the background will also increase by $2\pi w
 R$ for $w \in \mathbb{Z}$. This $w$, called the winding number of the string,
-can only be non-zero for closed strings which can be wrapped around the periodic
+can only be non-zero for closed strings, which can be wrapped around the periodic
 dimension.
 
 The total mass of the string contains terms with both the KK tower of states
@@ -299,7 +304,8 @@ when $n$ and $w$ are exchanged given the transformation
 \begin{equation}
  R \rightarrow R' = \frac{\alpha'}{R}\,.
 \end{equation}
-The new theory which is compactified on a circle of radius $R'$ is known as the
+Writing the equations of motion in terms of $R'$, having swapped $n$ and $w$, gives a new theory
+which is compactified on a circle of radius $R'$. This is known as the
 T-dual theory and the transformation is called T-duality
 \cite{Sakai1986,Kikkawa1984b}. The two
 theories,
@@ -311,7 +317,7 @@ of string theory for closed strings.
 \label{sec:dbranes-dbiintro}
 Despite using string theory we will not be dealing with strings themselves.
 Instead we will consider the dynamics of extended objects known as branes and
-in particular we will use Dirichlet- or D-branes. As mentioned above string
+in particular we will use Dirichlet- or D-branes. As mentioned above, string
 theories are linked by T-duality. Fundamental parameters are translated by the
 duality including the size of the extra-dimensions, the string coupling and the
 coordinate solutions of the strings.
@@ -331,11 +337,11 @@ move in the full $D$ dimensions. The endpoints of the open strings now observe
 Dirichlet boundary conditions, taking fixed values in the compactified
 direction. This follows through if more than one coordinate is made periodic.
 If $D-p-1$ spatial dimensions are compactified then the ends of the open
-strings ca still move freely in the other $p$ stpatial dimensions on a $p+1$
+strings can still move freely in the other $p$ spatial dimensions on a $p+1$
 dimensional hypersurface called a Dirichlet or D$p$-brane. 
 % 
-In Type IIB theory with supersymmetric string an extra condition means that
-only D$p$-branes with $p=1,3,5,7,9$ are allowed \footnotemark.
+In Type IIB theory with supersymmetric strings an extra condition means that
+only D$p$-branes with $p=1,3,5,7,9$ are stable \footnotemark.
 \footnotetext{There is also a $p=-1$ D-instanton in which the time direction
 along with all spatial directions is subject to Dirichlet boundary conditions
 \cite{Green1992,Green1988,Green1977}.}
@@ -367,9 +373,9 @@ Section \ref{sec:slowroll-intro}. D-branes are charged (with Ramond-Ramond
 charge) and we can consider a system of a D-brane and an anti-D-brane
 ($\overline{\mathrm{D}}$). As the two branes attract each other the distance
 between them can be used as a decreasing scalar degree of freedom, the
-inflaton \cite{brane1,brane2,brane3,brane7}. 
-When the branes collide they will annihilate and produce energy which would
-reheat the universe. 
+inflaton . 
+When the branes collide they will annihilate and produce energy to
+reheat the universe \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
 \addtodo{Add more description of standard D-brane models?}
 
@@ -378,7 +384,7 @@ introduces scalar fields known as moduli. These massless fields must be
 accounted for in the dynamics unless some way is found to ``stabilize'' them by
 fixing their mass to be large enough that they do not interfere.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
-stabilization. Instead they
+stabilization. Instead it was
 assumed that whatever stabilization technique was used would have no discernable
 effect on the inflationary physics. Kachru \etal \cite{brane4} recognized that
 in fact the stabilization will be important and must be taken into account.
@@ -452,7 +458,7 @@ There are two 3-cycles in the warped throat. The first is the $S^3$ subspace and
 is known as the A-cycle. The second, called the B-cycle, is the $S^2$ times a
 circle extended in the direction of the throat radius. The three-form fluxes
 $F_3$ and $H_3$, aligned with these cycles, are turned on to make the warped
-throat a solution of the Einstein equations. The cycles are threaded with
+throat a solution of the Einstein equations \cite{cline}. The cycles are threaded with
 quantized units of flux $M$ and $K$ given by: 
 \begin{eqnarray}
 \label{eq:fluxdefn-dbiintro}
@@ -488,7 +494,6 @@ used to formulate these constraints.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\addtodo{ More introduction of type IIB theory}
 % We will now concentrate on one particular non-canonical action. 
 The DBI scenario is based on the compactification of type IIB string theory on a 
 Calabi-Yau (CY) three-fold, where the form-field fluxes generate locally
@@ -498,7 +503,16 @@ field is identified with the radial position of the brane
 along the throat. Since this is an open string mode, the field 
 equation for the inflaton is determined by a DBI action.
 
-\missingfigure{Figure highlighting radial direction in throat}
+% 
+\begin{figure}
+ \centering
+ \includegraphics[width=0.8\textwidth]{dbi/graphs/braneworld4.jpg}
+ % braneworld4.pdf: 612x792 pixel, 72dpi, 21.59x27.94 cm, bb=0 0 612 792
+ \caption{***Change to better quality*** A representation of the 6 compactified dimensions.
+D3-branes appear as dots.}
+ \label{fig:braneworld}
+\end{figure}
+% 
 
 In general, the low-energy world-volume dynamics
 of a probe ${\rm D3}$-brane in a warped throat is determined 
