--- a/thesis.tex
+++ b/thesis.tex
@@ -1,15 +1,15 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.24 2009/08/05 22:25:47 ith Exp $
+% $Id: thesis.tex,v 1.25 2009/08/06 11:23:37 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
-% twoside,
+ twoside,
 12pt,
 bibtotoc, % Include bibliography in contents
 liststotoc, % Include lists of figures and tables in contents
 idxtotoc, % Include index in contents
-% onehalfspacing % onehalfspacing or doublespacing
-doublespacing
+onehalfspacing % onehalfspacing or doublespacing
+%doublespacing
 %,openright
 ]
 {icldt}
@@ -22,11 +22,11 @@ doublespacing
 \usepackage[CVSon, % CVS version in footers
             labels, % show labels
 	    todos, % show todos
-            hyperref % Use hyperref for links
+            %hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.24 2009/08/05 22:25:47 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.25 2009/08/06 11:23:37 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
