--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.25 2009/08/06 11:23:37 ith Exp $
+% $Id: thesis.tex,v 1.26 2009/08/06 15:44:24 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
  twoside,
@@ -22,11 +22,11 @@ onehalfspacing % onehalfspacing or doublespacing
 \usepackage[CVSon, % CVS version in footers
             labels, % show labels
 	    todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.25 2009/08/06 11:23:37 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.26 2009/08/06 15:44:24 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
