Added in abstracts from three papers and started to condense.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,13 +1,69 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.4 2009/07/14 14:05:11 ith Exp $
+% $Id: abstract.tex,v 1.5 2009/08/15 16:53:35 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.4 2009/07/14 14:05:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.5 2009/08/15 16:53:35 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
 \label{ch:abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 \section*{}
-INSERT ABSTRACT HERE
+\singlespacing
+Inflationary cosmology is the leading explanation of the very early universe. 
+Many specific models have been derived which agree with current observations.
+The non-gaussianity of the universe shortly after the Big Bang has emerged as
+an important tool to differentiate between these models. In this thesis
+two aspects of the search for non-gaussianity are described.
+
+First, string-inspired models with large non-gaussianity are investigated.
+% First paper
+An upper bound on the amplitude of the primordial gravitational wave spectrum
+generated during ultra-violet Dirac-Born-Infeld inflation is derived. 
+% The bound is insensitive
+% to the form of the inflaton potential and the warp factor of the compactified
+% dimensions and can be expressed entirely in terms of observational parameters
+% once the volume of the five-dimensional sub-manifold of the throat has been
+% specified. 
+For standard type IIB compactification schemes, the bound predicts
+undetectably small tensor perturbations with a tensor-scalar ratio $r <
+10^{-7}$. 
+This is incompatible with a corresponding lower limit of $r > 0.1
+(1-n_s)$, which applies to any model that generates a red spectral index $n_s
+<1$ and a potentially detectable non-gaussianity in the curvature perturbation.
+% Possible ways of evading these bounds in more general DBI-type scenarios are
+% discussed and a multiple-brane model is investigated as a specific example. 
+
+% Second Paper
+Extending this analysis, a class of non-canonical inflationary models is
+identified, where the leading-order contribution to the non-gaussianity of the
+curvature perturbation is determined by the sound speed of the fluctuations in
+the inflaton field. 
+Included in this class of models is the effective action for
+multiple coincident branes in the finite n limit. 
+% The action for this
+% configuration is determined using an iterative technique, based upon the
+% fundamental representation of SU(2). 
+In principle the upper bounds on the
+tensor-scalar ratio that arise in the standard, single-brane DBI inflationary
+scenario can be relaxed in such multi-brane configurations if a large and
+detectable non-Gaussianity is generated. 
+% Moreover models with a small number of
+% coincident branes could generate a gravitational wave background that will be
+% observable to future experiments. 
+
+% Third paper
+The second aspect of non-gaussianity we describe is the numerical calculation
+of the non-gaussian parameter $\fnl$ for a general class of single field models.
+We numerically solve the Klein-Gordon equation at second
+order in cosmological perturbation theory in closed form. 
+We use the slow-roll
+version of the second order source term and show that our method is extendable
+to the full equation.
+% We consider two standard single field models and find that
+% the results agree with previous calculations using analytic methods, where
+% comparison is possible. 
+Our procedure allows the evolution of second order
+perturbations in general and the calculation of the non-linearity parameter
+$\fnl$ to be examined in cases where there is no analytical solution available. 
