--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.5 2009/08/15 16:53:35 ith Exp $
+% $Id: abstract.tex,v 1.6 2009/08/15 16:54:03 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.5 2009/08/15 16:53:35 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.6 2009/08/15 16:54:03 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -40,21 +40,21 @@ Extending this analysis, a class of non-canonical inflationary models is
 identified, where the leading-order contribution to the non-gaussianity of the
 curvature perturbation is determined by the sound speed of the fluctuations in
 the inflaton field. 
-Included in this class of models is the effective action for
+This class of models includes the effective action for
 multiple coincident branes in the finite n limit. 
 % The action for this
 % configuration is determined using an iterative technique, based upon the
 % fundamental representation of SU(2). 
-In principle the upper bounds on the
+In principle, the upper bounds on the
 tensor-scalar ratio that arise in the standard, single-brane DBI inflationary
-scenario can be relaxed in such multi-brane configurations if a large and
+scenario can be relaxed in multi-brane configurations if a large and
 detectable non-Gaussianity is generated. 
 % Moreover models with a small number of
 % coincident branes could generate a gravitational wave background that will be
 % observable to future experiments. 
 
 % Third paper
-The second aspect of non-gaussianity we describe is the numerical calculation
+The second aspect of non-gaussianity is described with the numerical calculation
 of the non-gaussian parameter $\fnl$ for a general class of single field models.
 We numerically solve the Klein-Gordon equation at second
 order in cosmological perturbation theory in closed form. 
@@ -64,6 +64,6 @@ to the full equation.
 % We consider two standard single field models and find that
 % the results agree with previous calculations using analytic methods, where
 % comparison is possible. 
-Our procedure allows the evolution of second order
-perturbations in general and the calculation of the non-linearity parameter
+The procedure allows the evolution of second order
+perturbations in general and the calculation of the parameter
 $\fnl$ to be examined in cases where there is no analytical solution available. 
